test_suite_default/tests/ui/compilefail/captcha_not_identified.rs
use hcaptcha::Hcaptcha;

#[derive(Hcaptcha)]
struct Test {
    Hcaptcha: String,
}

fn main() {
    println!("Super!");
}